--- a/public/YoutubeContentTracker.html
+++ b/public/YoutubeContentTracker.html
@@ -25,6 +25,13 @@
                     <input type="url" id="channelUrl" placeholder="https://youtube.com/@channelname" required>
                 </div>
                 <button type="submit" class="add-btn">Add Channel</button>
+                <!-- Add these buttons somewhere in your UI -->
+                 <div class="form-group">
+                    <button onclick="tracker.clearAllData()">Clear All Data</button>
+                    <button onclick="tracker.exportData()">Export Data</button>
+                    <input type="file" id="importFile" accept=".json" onchange="tracker.importData(event)" style="display: none;">
+                    <button onclick="document.getElementById('importFile').click()">Import Data</button>
+                </div>
             </form>
         </div>
 
